--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -28,6 +29,10 @@
             android:name=".Teacher"
             android:label="@string/title_activity_teacher"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Student_ace"
+            android:label="@string/title_activity_student_ace"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
